2005-08-06 16:31 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) cleaned out old
	stuff and just use ring for managing faces.

2005-08-06 15:56 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringTriangle) return triangle info.

2005-08-06 15:22 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) fixed the
	repeat of gap0 instead of gap1 in ring init.
	* src/gridinsert.c (gridFillRingWithFaces) return NULL if face not
	in grid.

2005-08-06 14:50 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) default project is le and LeadingEdgeBG active

2005-08-05 16:28 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) initialized
	ring and call gridFillRingWithFaces for test.
	* src/gridinsert.c (gridFillRingWithFaces) get rid of segments by
	inserting triangles. Only a test of current face logic so far.

2005-08-05 15:14 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringSegment) return segment info.

2005-08-05 13:35 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddTriangle) adds three triangle sides as opposite
	sense segments

2005-08-05 13:18 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddSegment) remove existing segment if it is added
	in opposite direction.

2005-08-05 10:15 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddTriangle) abort traingle add if base segment does
	not exist

2005-08-05 09:42 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddTriangle) add triangle to ring.

2005-08-05 09:22 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddSegment) add segment to ring.

2005-08-05 09:04 Mike Park  <mike.park@nasa.gov>

	* src/Makefile (local,clean) removed dup Plan, added Ring
	* src/Makefile.am added Ring to libs and tests

2005-08-05 09:00 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringCreate,ringFree) created new object to keep
	track of a continuous loop of linear segements on a geometry face