@@ -1,3 +1,8 @@
+2005-08-08 11:16 Mike Park  <mike.park@nasa.gov>
+
+	* src/ring.c (ringSegmentsContainNode) return node uv if it is in
+	segment.
+
 2005-08-06 16:31 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridinsert.c (gridReconstructSplitEdgeRatio) cleaned out old
